--- a/VehicleLoanSystem/appsettings.json
+++ b/VehicleLoanSystem/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySQLConnection": "server=localhost;port=3306;database=MicroProjectVLS;user=root;password=root"
+}
 }
